syntax = "proto3";

package kv_store;

service KvStore {
  rpc Example (ExampleRequest) returns (ExampleReply) {}

  // TODO: Protocol buffers
  rpc Echo (EchoRequest) returns (EchoReply) {}
  rpc Put (PutRequest) returns (PutReply) {}
  rpc Get (GetRequest) returns (GetReply) {}
}

message ExampleRequest {
  uint32 input = 1;
}

message ExampleReply {
  uint32 output = 1;
}

// TODO: Protocol buffers
message EchoRequest {
  string message = 1;
}

message EchoReply {
  string message = 1;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutReply {
}

message GetRequest {
  bytes key = 1;
}

message GetReply {
  bytes value = 1;
}